fix: path component for dark mode

--- a/src/components/path.module.css
+++ b/src/components/path.module.css
@@ -1,4 +1,3 @@
-/* Basic styling for the container and link */
 .hoverCardContainer {
   position: relative;
   display: inline-block;
@@ -6,18 +5,15 @@
 
 .hoverCardLink {
   text-decoration: none;
-  color: #007BFF;
   font-weight: bold;
   cursor: pointer;
 }
 
-/* Initial state of the card - hidden */
 .hoverCard {
   position: absolute;
   width: 200px;
   padding: 10px;
-  background-color: #fff;
-  border: 1px solid #ccc;
+  background-color: #f6f6f7;
   border-radius: 5px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   opacity: 0;
@@ -35,6 +31,10 @@
   align-items: center;
   justify-content: center;
   text-align: center;
+}
+
+[data-theme='dark'] .hoverCard {
+  background-color: #252529;
 }
 
 .hoverCardContainer:hover .hoverCard {
